tests/error/tracing_errors/bad_int1.py
from guppylang.decorator import guppy


@guppy.comptime
def test(x: int) -> int:
    # constant is smallest positive value that fails
    return x + (1 << 63)

guppy.compile(test)
